# Aamati

./: .gitignore  .gitmodules  CMakeLists.txt  COMPLETE_USAGE_GUIDE.md  CommandForStarting.txt  FEATURE_COMPLETION_SUMMARY.md  INTEGRATION_TESTING_GUIDE.md  JUCE_PLUGIN_SETUP.md  PROJECT_SUMMARY.md  README.md  TRAINING_GUIDE.md  directories.txt  install_commands.txt  logging_config.py  requirements.txt  run_aamati.py  run_tests.py  setup_aamati.py  setup_ml_models.py  startAamati.sh  system_health.py  test_aamati.py
MLPython/: MachineLearningModel.py  README.md  categorical_encoder.pkl  current_groove_features.csv  estimate_features.py  extract_energy_features.py  extract_groove_features.py  extract_groove_features_backup.py  extract_groove_features_old.py  fixed_midi_compliance.py  groove_features.csv  groove_features_log.csv  groove_features_log_for_pred.csv  groove_mood_model.onnx  groove_mood_model.pkl  linear_regression.py  log_backup.csv  main.py  midi_compliance.py  mood_classification_model.py  mood_feature_map.json  optimized_mood_classifier.py  predict_groove_mood.py  raw_features.csv  train_models.py  workflow_manager.py
MLPython/AutomationScripts/: compare_mood_data.py  copy_groove_features.py  filter_new_midis.py  reset_groove_features.py  run_after_extraction.py  update_class_models_1.py  update_class_models_2.py  update_class_models_3.py  update_models.py
MLPython/ModelClassificationScripts/: dynamic_intensity_randomforest.py  energy_linear_regression.py  energy_randomforest.py  fill_activity_randomforest.py  fx_character_regression.py  fx_character_rfclassifier.py  rhythmic_density_ordinal_regression.py  swing_randomforest.py  timing_feel_randomforest.py
MLPython/scripts/: automation_manager.py  copy_groove_features.py  extract_features.py  reset_groove_features.py  train_models.py
Source/: AIMidiGenerator.cpp  AIMidiGenerator.h  EmotionalOptimizer.cpp  EmotionalOptimizer.h  FeatureExtractor.cpp  FeatureExtractor.h  GrooveShaper.cpp  GrooveShaper.h  ModelRunner.cpp  ModelRunner.h  ModernUI.cpp  ModernUI.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
licenses/: DISCLAIMER.txt  EULA.txt  PRIVACY_POLICY.txt  TERMS_OF_SERVICE.txt
(+63 files in other folders)
